// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`initialisePylonSocketData > should initialize with all options provided 1`] = `
{
  "app": {
    "config": {
      "audit": false,
      "auth": null,
      "rateLimit": false,
      "responseCache": false,
    },
    "domain": "test.lindorm.io",
    "environment": "development",
    "name": "test-service",
    "version": "1.2.3",
  },
  "pylon": {},
  "tokens": {},
}
`;

exports[`initialisePylonSocketData > should use defaults for missing options 1`] = `
{
  "app": {
    "config": {
      "audit": false,
      "auth": null,
      "rateLimit": false,
      "responseCache": false,
    },
    "domain": "unknown",
    "environment": "unknown",
    "name": "unknown",
    "version": "0.0.0",
  },
  "pylon": {},
  "tokens": {},
}
`;

exports[`initialisePylonSocketData > should use defaults for undefined values 1`] = `
{
  "app": {
    "config": {
      "audit": false,
      "auth": null,
      "rateLimit": false,
      "responseCache": false,
    },
    "domain": "unknown",
    "environment": "unknown",
    "name": "unknown",
    "version": "0.0.0",
  },
  "pylon": {},
  "tokens": {},
}
`;
